# database

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/: run-tests.sh
.github/workflows/: pull_request.yml  transform.yml
Anseys/: graph.gv  metadata.txt
Beauvais/: metadata.txt
Cliges/: graph.gv  metadata.txt
Commedia/: graph.gv  metadata.txt
Isopet/: graph.gv  metadata.txt
Joinville/: graph.gv  metadata.txt
Milione/: graph.gv  metadata.txt
Monarchia/: graph.gv  metadata.txt
Suma/: graph.gv  metadata.txt
TEI_documentation/: openStemmata.rng  openStemmata.xml
Wauquelin/: graph.gv  metadata.txt
data/AlexandreLeGrand/: Alexandre.gv  metadata.txt
data/Charrette_2004/: Lancelot.gv  metadata.txt
data/CleriadusMeliadice/: Cleriadus.gv
data/Paul_1874_Iwein/: metadata.txt  stemma.gv
data/fro/: Tyssens_1971_Guillaume
examples/Paris_1872_Alexis/: Paris_1872_Alexis.xml  metadata.txt  stemma.gv
examples/Segre_1971_Roland/: Segre_1971_Roland.xml  metadata.txt  stemma.gv
openstemmata-database/: __init__.py
openstemmata-database/schema/: odd.html.tmp
openstemmata-database/tests/: template.tei.xml  test_dot.py  test_metadata.py
policratique/: graph.gv  metadata.txt
schema/: catalog.xml  odd.html.tmp  openStemmata.html  openStemmata.rng  openStemmata.xml  openStemmata.xsd  xml.tmp
src/openstemmata/: __init__.py
tests/: superscript.py  test_dot.py  test_folder.py  test_metadata.py  test_tei.py  testthat.R  testthat.py  transformation.py
tests/R/: readDot.R
tests/testthat/: test-graphviz.R  (+2 more)
transform/: superscript.py  template.tei.xml  transformation.py
(+1446 files in other folders)
