[metadata]
name = openstemmata
version = 0.1.0

author =
author_email =
url='https://github.com/OpenStemmata/database',

description = An open source collection of historical text genealogies, in forms of tree-like graphs (stemma) for a variety of languages.
long_description = file: README.md
long_description_content_type = text/markdown

keywords =
    manuscript
    stemmatology
license = CC-BY-SA-4.0 license
license_files = LICENSE

platforms = any
classifiers =
    Development Stats ::
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: Other/Proprietary License (CC-BY License)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages = find:
package_dir =
    =src
install_requires =
    networkx
    lxml
include_package_data = True


;include_dirs=[]

[options.packages.find]
where = src
exclude =
    test*

[options.package_data]
opentstemmata =
    data/*
    examples/*
    schema/*

;[testimports]
;deps =
;    pytest
;    pytest-cov
;
;[test-env]
;deps =
;    {[testimports]deps}
;commands =
;    pytest {posargs}
;
;[options.extras_require]  # in setup.cfg
;test =
;    pytest
;    pytest-cov
;
;[tool:pytest]
;addopts = --cov
;testpaths =
;    tests
;
;[coverage:run]
;source=openstemmata_database
;
;[coverage:report]
;show_missing = True

